[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "asset_base"
version = "0.0.0"  # Placeholder version; setuptools-scm will override this
description = "A package for obtaining, managing and provision of financial securities meta-data and time-series data."
authors = [{name="Justin Solms", email="justinsolms@gmail.com" }]
readme = "README.md"
requires-python = "==3.12.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["financial", "data", "database", "asset", "share", "listed", "equity", "ETF", "cash", "forex", "icb", "currency", "eodhistoricaldata", "eod", "trade", "dividend"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
your_package_name = ["data/*", "config/*"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
write_to = "_version.py"  # Path to write version to a file.
# fallback_version = "0.1.0"  # Fallback version if SCM is not available.