[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "asset_base"
dynamic = ["version"]
description = "A package for obtaining, managing and provision of financial securities meta-data and time-series data."
readme = "README.md"
requires-python = "==3.12.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["financial", "data", "database", "asset", "share", "listed", "equity", "ETF", "cash", "forex", "icb", "currency", "eodhistoricaldata", "eod", "trade", "dividend"]
dependencies = [
    "aiohttp",
    "aiounittest",
    "click",
    "numpy",
    "pandas",
    "python_stdnum",
    "PyYAML",
    "scipy",
    "setuptools",
    "SQLAlchemy",
    "SQLAlchemy_Utils",
]

[[project.authors]]
name = "Justin Solms"
email = "justinsolms@gmail.com"

[tool.setuptools.dynamic]
version = {attr = "asset_base._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
your_package_name = ["data/*", "config/*"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
write_to = "src/asset_base/_version.py"
# tag_regex = '^v?(?P<version>\d+(\.\d+){1,2})$'  # This regex allows tags with and without 'v' prefix

[project.scripts]
asset-base = "asset_base.__main__:cli"
