[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "asset_base"
dynamic = ["version"]
description = "A package for obtaining, managing and provision of financial securities meta-data and time-series data."
readme = "README.md"
requires-python = "==3.12.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["financial", "metadata", "data", "database", "asset", "share", "listed", "equity", "ETF", "cash", "forex", "icb", "currency", "eodhistoricaldata", "eod", "trade", "dividend"]
dependencies = [
    "ipython",
    "jupyter",
    "setuptools",
    "esbonio",
    "mypy",
    "ipdb",
    "tqdm",
    "click",
    "openpyxl",
    "xlsxwriter",
    "aiounittest",
    "aiohttp",
    "python_stdnum",
    "numpy<2.0.0",  # HACK: Temporarily pin numpy to avoid compatibility issues when numpy >= 2.0.0
    "scipy",
    "pandas",
    "matplotlib",
    "xlrd",
    "Flask",
    "fuzzywuzzy",
    "Jinja2",
    "Markdown",
    "PyYAML",
    "SQLAlchemy",
    "sqlalchemy_utils",
    "python-Levenshtein",
]

[[project.authors]]
name = "Justin Solms"
email = "justinsolms@gmail.com"

[tool.setuptools.package-data]
asset_base = [
    "data/static/*",
    "data/dumps/*",
    "config/*"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/asset_base/_version.py"
fallback_version = "0.0.0"
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[project.scripts]
asset-base = "asset_base.__main__:cli"
